feature: [issues-40] upgrade java stack part3 (#43)
Finished restructuring the project