@@ -1,8 +1,25 @@
 plugins {
-  id "java-library"
+  id "java"
+  id "groovy"
+  id "org.springframework.boot"
 }
 
+apply from: "$rootDir/gradle/configure-java.gradle"
+
 dependencies {
+  implementation projects.service
+  implementation libs.rlib.logger.slf4j
+  implementation libs.springboot.starter.core
+  implementation libs.springboot.starter.log4j2
 
   testImplementation projects.testSupport
+}
+
+tasks.withType(GroovyCompile).configureEach {
+  options.forkOptions.jvmArgs += "--enable-preview"
+}
+
+configurations.each {
+  it.exclude group: "org.slf4j", module: "slf4j-log4j12"
+  it.exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
 }
